// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts a stream as source: employee creation 1`] = `
{
  "mutations": [
    {
      "create": {
        "_id": "espen",
        "_type": "employee",
        "name": "Espen",
      },
    },
    {
      "create": {
        "_id": "pk",
        "_type": "employee",
        "name": "Per-Kristian",
      },
    },
  ],
}
`;

exports[`accepts an array as source: employee creation 1`] = `
{
  "mutations": [
    {
      "create": {
        "_id": "espen",
        "_type": "employee",
        "name": "Espen",
      },
    },
    {
      "create": {
        "_id": "pk",
        "_type": "employee",
        "name": "Per-Kristian",
      },
    },
  ],
}
`;

exports[`rejects on missing asset type prefix 1`] = `
[Error: Asset type is not specified.
\`_sanityAsset\` values must be prefixed with a type, eg image@url or file@url.
See document with ID "deadpool", path: image._sanityAsset]
`;

exports[`skips system documents if asked: employee creation 1`] = `
{
  "mutations": [
    {
      "create": {
        "_id": "_.retention.maximum",
        "_type": "system.retention",
        "days": 90,
        "maximum": true,
        "preferShorter": true,
      },
    },
    {
      "create": {
        "_id": "_.retention.normal",
        "_type": "system.retention",
        "days": 3,
      },
    },
    {
      "create": {
        "_id": "_.groups.user",
        "_type": "system.group",
        "grants": [],
        "members": [
          "user",
        ],
      },
    },
    {
      "create": {
        "_id": "radhe",
        "_type": "employee",
        "name": "Radhe",
      },
    },
    {
      "create": {
        "_id": "robin",
        "_type": "employee",
        "name": "Robin",
      },
    },
    {
      "create": {
        "_id": "matt",
        "_type": "employee",
        "name": "Matt",
      },
    },
  ],
}
`;

exports[`skips system documents if asked: employee creation 2`] = `
{
  "mutations": [
    {
      "create": {
        "_id": "radhe",
        "_type": "employee",
        "name": "Radhe",
      },
    },
    {
      "create": {
        "_id": "robin",
        "_type": "employee",
        "name": "Robin",
      },
    },
    {
      "create": {
        "_id": "matt",
        "_type": "employee",
        "name": "Matt",
      },
    },
  ],
}
`;
